--- a/packages/strapi/package.json
+++ b/packages/strapi/package.json
@@ -73,7 +73,8 @@
     "strapi-generate-plugin": "3.0.0-beta.1",
     "strapi-generate-policy": "3.0.0-beta.1",
     "strapi-generate-service": "3.0.0-beta.1",
-    "strapi-utils": "3.0.0-beta.1"
+    "strapi-utils": "3.0.0-beta.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "test": "jest --verbose",
